2002-06-28  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-comhelp.h: file removed

2002-06-24  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h: ECA_ENGINE::set_position_samples() added

2002-06-23  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-resources.h: removed ECA_RESOURCES::set_default()
	* eca-resources.h: ECA_RESOURCES::has_any() added

2002-05-18  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-manager.h (get_object_list): return type changed
	
2002-05-17  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-manager.h (all): added inheritance of 
	DYNAMIC_OBJECT<std::string>
	* eca-chainsetup.h (set_audio_io_manager_option): added

2002-05-16  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-proxy-server.h (set_priority): removed
	* eca-engine-driver.h (stop,exit): blocking arg dropped

2002-05-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* ctrl-source.h (init): arg dropped
	* ctrl-source.h (step_length): removed
	* generic-controller.h (param_number, low_range_limit, high_range_limit): removed
	* generic-controller.h (all): changed to derive CONTROLLER_SOURCE
	instead of OPERATOR
	* finite-envelope.h (all): file removed
	
2002-04-29  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-object-factory.h (all): turned into a singleton class
	* eca-object-factory.h (reserve_factory, free_factory): removed
	* eca-object-factory.h (*_list, *_object): removed
	* eca-object-factory.h (object_identifier): removed
	
2002-04-28  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-logger.h (all): added
	* eca-logger-interface.h (all): added
	* eca-logger-default.h (all): added
	* eca-debug.h (all): removed, replaced by eca-logger.h

2002-04-25  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library version number added to library name; current
	  name is libecasound8
	* eca-chainsetup.h, eca-chainsetup-bufparams.h
	  (sched_priority): 
        renamed to get_sched_priority to avoid namespace conflict 