@@ -1,3 +1,10 @@
+2002-07-17  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* audiofx.h (class EFFECT_BASE): channels() from protected
+	to public scope
+	* audiofx_analysis.cpp (EFFECT_VOLUME_BUCKETS): renamed from EFFECT_ANALYZE
+	(EFFECT_VOLUME_PEAK): new class
+
 2002-06-28  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* eca-comhelp.h: file removed
